[tool.poetry]
name = "hammer"
version = "0.1.0"
description = "数据科学家的助手."
authors = ["lbb <lbbagi@yeah.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
joblib = "^1.4.2"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
pyyaml = "^6.0.2"
loguru = "^0.7.3"
psutil = "^6.1.1"
pyarrow = "^19.0.0"
tqdm = "^4.67.1"

modin = {extras = ["ray"], version = "^0.32.0", optional = true}
fire = "^0.7.0"
clickhouse-connect = "^0.8.15"
tenacity = "^9.0.0"
networkx = "^3.4.2"
pyspark = "3.5.4"
typeguard = "^4.4.2"
wrapt = "^1.17.2"
tornado = "^6.4.2"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"

[tool.poetry.extras]
bigdata = ["ray", "modin"]


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.3.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
